# libphase

./: .gitignore  CMakeLists.txt  README.md  environment.yml
conf/: test.yml
demo/: main.cc
notebooks/: 00-Overview.ipynb  01-Techniques.ipynb  02-Challenges.ipynb  graphs.ipynb
notebooks/csv/: bp_bwaves.csv  detection.csv  energy_bwaves.csv  length.csv  representative.csv  scaling.csv  stability.csv
python/: setup.py
python/libphase/: constants.py
python/libphase/scripts/: pin.py  simpoint.py
ref/pintools/dynamic_instruction_counter/: dynamic_instruction_counter.cpp  make.sh
ref/pintools/static_instruction_counter/: make.sh
ref/pintools/tracer/: make.sh  makefile  makefile.config  tracer.cpp
ref/spec/: gcc-mixed_asm_C.cfg
ref/tools/: check_trace.cc  tdb.cc
scripts/: install.sh
scripts/spec/: bbv.sh  generate_trace.sh  instruction_count.sh  invoke.sh  parse_instruction_count.py  perf.sh  setup.sh  simpoint.sh  trace.sh
src/: BBVPhaseDetector.h  BCPhaseDetector.h  CPIPhaseDetector.h  IWSPhaseDetector.h  PhaseDetector.h  PhaseManager.cc  PhaseManager.h  TraceIO.h  utils.h
